--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
       </section>
 
       <section id="library">
-        <div class="container px-5">
+        <div class="container px-5 py-5">
           <div class="section-title pt-5">
             <p class="mb-4 h1 weight-600">Библиотека Cursus</p>
           </div>
@@ -349,27 +349,182 @@
         </div>
       </section>
 
+      <section id="testing">
+        <div class="container px-5 py-5">
+          <div class="section-title">
+            <p class="mb-4 h1 weight-600">Тестирование кандидатов<br> и сотрудников</p>
+          </div>
+          <p class="h3 mb-4 weight-500 pt-3">Плюсы тестирования:</p>
+          <div class="row">
+            <div class="col-6">
+                <div class="row g-0 text-center">
+                  <div class="col-md-1">
+                    <div class="dot"></div>
+                  </div>
+                  <div class="col-md-11 d-flex flex-column justify-content-center">
+                    <p class="h3 text-grey m-0 text-start">Онлайн отбор кандидатов, с исключанием фактора ошибки </p>
+                  </div>
+                </div>
+            </div>
+            <div class="col-6">
+                <div class="row g-0 text-center">
+                  <div class="col-md-1">
+                    <div class="dot"></div>
+                  </div>
+                  <div class="col-md-11 d-flex flex-column justify-content-center">
+                    <p class=" h3 text-grey text-start">Выявление наиболее квалифицированного работника путем сравнения результатов тестирования </p>
+                  </div>
+                </div>
+            </div>
+          </div>
+          <p class="h3 weight-600 py-5">3 вида теста Result, DISK и QI:</p>
+          <div class="row">
+                <div class="col-4">
+                    <div class="row">
+                        <div class="col-3">
+                            <img src="images/пазл.svg">
+                        </div>
+                        <div class="col-9 p-2">
+                            <span class="h2 weight-500" style="border-bottom: 3px solid #EE6767;">DISK</span>
+                            <p class="h5 weight-400 pt-2">Оценка склада характера, природных склонностей</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="row">
+                        <div class="col-3">
+                            <img src="images/пазл.svg">
+                        </div>
+                        <div class="col-9 p-2">
+                            <span class="h2 weight-500" style="border-bottom: 3px solid #EE6767;">IQ</span>
+                            <p class="h5 weight-400 pt-2">Оценка интелектуальных способностей у кандидата </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="row">
+                        <div class="col-3">
+                            <img src="images/пазл.svg">
+                        </div>
+                        <div class="col-9 p-2">
+                            <span class="h2 weight-500" style="border-bottom: 3px solid #EE6767;">RESULT</span>
+                            <p class="h5 weight-400 pt-2">Оценка продуктивности у соискателя на предыдущей работе</p>
+                        </div>
+                    </div>
+                </div>
+          </div>
+        </div>
+      </section>
+      <section>
+        <div class="d-flex justify-content-center flex-column" style="padding-left: 12.5%;padding-right: 12.5%;">
+            <img src="images/cringe.jpg">
+        </div>
+        <div class="d-flex justify-content-center pb-5">
+          <button class="btn btn-primary fw-bold shadow-none text-nowrap p-3">Начать тестирование</button>
+        </div>
+      </section>
+
+      <section id="constructor">
+        <div class="container px-5 pb-5">
+              <p class="mb-4 h1 weight-600 pt-5">Конструктор инструкции</p>
+              <p class="mb-4 h4 weight-500 w-50 pb-4">Уникальный конструктор для собственного планирования и обучения сотрудников</p>
+              
+              <table style="width: 60%;margin-left: 20%;">
+                  <tr>
+                      <td>
+                        <div class="d-flex" style="overflow: hidden;height: 5em;">
+                            <img src="images//Group 578.png">
+                            <p class="ps-1 weight-400">Опишите и систематизируйте вашу собственную технологию обучения</p>
+                        </div>     
+                      </td>
+                      <td></td>
+                  </tr>
+                  <tr>
+                      <td></td><td><div class="d-flex" style="overflow: hidden;height: 5em;">
+                            <img src="images//Group 579.png">
+                            <p class="ps-1 pt-3">Внедрите экспертность ваших специалистов</p>
+                        </div> </td>
+                  </tr>
+                  <tr>
+                      <td><div class="d-flex" style="overflow: hidden;height: 5em;">
+                            <img src="images//Group 577.png">
+                            <p class="ps-1">Создайте личные модули для обучения каждого сотрудника</p>
+                        </div> </td><td></td>
+                  </tr>
+                  <tr>
+                      <td></td><td><div class="d-flex" style="overflow: hidden;height: 5em;">
+                            <p class="pe-1 m-0">1</p>
+                            <img src="images//Group 580.png">
+                            <p class="ps-1">Отслеживайте процесс и прогресс обучения</p>
+                        </div> </td>
+                  </tr>
+              </table>
+              <div class="row pt-5">
+                  <div class="col-md-8 weight-600 h4">
+                      Проверьте конструктор инстуркции на деле  с помощью <br>
+                      <span class="text-lightred">7 дневной бесплатной подписки</span>
+                  </div>
+                  <div class="col-md-4">
+                      <button class="btn btn-primary fw-bold shadow-none text-nowrap p-3 px-5">Получить подписку</button>
+                  </div>
+              </div>
+        </div>
+      </section>
+
+      <section>
+          <div class="container px-5">
+            <div class="section-title pt-5">
+            <p class="mb-5 h1 weight-600">Почему стоит выбрать CURSUS ?</p>
+          </div>
+              <div class="row py-5">
+              <div class="col-md-4 d-flex flex-column text-center align-items-center">
+                  <img src="images//clock.svg">
+                  <p class="h1 weight-600">экономия времения</p>
+                  <p class="weight-500">С помощью функции тестирования вы сможете оперативно и быстро подбирать новых сотрудников и тестировать действующих</p>
+              </div>
+              <div class="col-md-4 d-flex flex-column text-center align-items-center">
+                  <img src="images//lanp.svg">
+                  <p class="h1 weight-600">автоматизация процессов</p>
+                  <p class="weight-500">Автоматизируйте плавное внедрение новых сотрудников с помощью инструкции которые вы сможете создать на портале</p>
+              </div>
+              <div class="col-md-4 d-flex flex-column text-center align-items-center">
+                  <img src="images//cap.svg">
+                  <p class="h1 weight-600">Обучение в любое время</p>
+                  <p class="weight-500">Обучайтесь и расширяйте свои знания с помощью курсов и книг которые доступны постоянно</p>
+              </div>
+          </div>
+          </div>
+      </section>
+
       <section id="contacts">
         <div class="container">
           <div class="row">
                   <div class="col">
                     <div class="section-title p-5">
-                      <h1 class="mb-4">Контакты</h1>
-                      <table class="table table-borderless align-middle">
+                      <h1 class="mb-4 weight-600">Контакты</h1>
+                      <table class="table table-borderless h4 weight-500 align-middle">
                         <tbody>
-                      <tr>
-                        <th scope="row"><img src="images/phone.svg"></th>
-                        <td>+7 775 228 3812</td>
-                      </tr>
-                      <tr>
-                        <th scope="row"><img src="images/mail.svg"></th>
-                        <td>г.Алматы ул. Сатпаева 31 БЦ “SAT” </td>
-                      </tr>
-                      <tr>
-                        <th scope="row"><img src="images/location.svg"></th>
-                        <td>info@cursus.asia</td>
-                      </tr>
-                  </tbody>
+                          <tr>
+                            <th scope="row"><img src="images/phone.svg"></th>
+                            <td>+7 775 228 3812</td>
+                          </tr>
+                          <tr>
+                            <th scope="row"></th>
+                            <td></td>
+                          </tr>
+                          <tr>
+                            <th scope="row"><img src="images/mail.svg"></th>
+                            <td>г.Алматы ул. Сатпаева 31 БЦ “SAT” </td>
+                          </tr>
+                          <tr>
+                            <th scope="row"></th>
+                            <td></td>
+                          </tr>
+                          <tr>
+                            <th scope="row"><img src="images/location.svg"></th>
+                            <td>info@cursus.asia</td>
+                          </tr>
+                        </tbody>
                       </table>
                   </div>
                     
@@ -381,156 +536,11 @@
               </div>
         </div>
       </section>
-      <section id="testing">
-        <div class="container px-5">
-          <div class="section-title pt-5">
-            <p class="mb-4 h1 weight-600">Тестирование кандидатов и сотрудников</p>
-          </div>
-          <p class="h3 mb-4 weight-200">Плюсы тестирования:</p>
-          <div class="row pb-5">
-            <div class="col-6">
-                <div class="row g-0 text-center">
-                  <div class="col-md-1">
-                    <div class="dot"></div>
-                  </div>
-                  <div class="col-md-11 d-flex flex-column justify-content-center">
-                    <p class="h3 text-muted m-0 text-start">Онлайн отбор кандидатов, с исключанием фактора ошибки </p>
-                  </div>
-                </div>
-            </div>
-            <div class="col-6">
-                <div class="row g-0 text-center">
-                  <div class="col-md-1">
-                    <div class="dot"></div>
-                  </div>
-                  <div class="col-md-11 d-flex flex-column justify-content-center">
-                    <p class=" h3 text-muted text-start">Онлайн отбор кандидатов, с исключанием фактора ошибки </p>
-                  </div>
-                </div>
-            </div>
-          </div>
-          <p class="h3 py-5">3 вида теста Result, DISK и QI:</p>
-          <div class="row">
-                <div class="col-4">
-                    <div class="row">
-                        <div class="col-3">
-                            <img src="images/пазл.svg">
-                        </div>
-                        <div class="col-9 p-2">
-                            <span class="h2" style="border-bottom: 3px solid #EE6767;">DISK</span>
-                            <p>Оценка склада характера, природных склонностей</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-4">
-                    <div class="row">
-                        <div class="col-3">
-                            <img src="images/пазл.svg">
-                        </div>
-                        <div class="col-9 p-2">
-                            <span class="h2" style="border-bottom: 3px solid #EE6767;">IQ</span>
-                            <p>Оценка интелектуальных способностей у кандидата </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-4">
-                    <div class="row">
-                        <div class="col-3">
-                            <img src="images/пазл.svg">
-                        </div>
-                        <div class="col-9 p-2">
-                            <span class="h2" style="border-bottom: 3px solid #EE6767;">RESULT</span>
-                            <p>Оценка продуктивности у соискателя на предыдущей работе</p>
-                        </div>
-                    </div>
-                </div>
-          </div>
-        </div>
-      </section>
-      <section>
-        <div class="d-flex justify-content-center flex-column pb-5" style="padding-left: 12.5%;padding-right: 12.5%;">
-            <img src="images/cringe.jpg">
-            <button style="width: 50%;margin-left: 25%;">Начать тестирование</button>
-        </div>
-      </section>
-      <section id="constructor">
-        <div class="container px-5 pb-5">
-              <p class="mb-4 h1 weight-600 pt-5">Конструктор инструкции</p>
-              <p class="mb-4 h5 weight-600">Уникальный конструктор для собственного планирования и обучения сотрудников</p>
-              <table style="width: 60%;margin-left: 20%;">
-                  <tr>
-                      <td>
-                        <div class="d-flex" style="overflow: hidden;height: 5em;">
-                            <p class="pe-1 m-0">1</p>
-                            <img src="images//cringe.jpg">
-                            <p class="ps-1">Опишите и систематизируйте вашу собственную технологию обучения</p>
-                        </div>     
-                      </td>
-                      <td></td>
-                  </tr>
-                  <tr>
-                      <td></td><td><div class="d-flex" style="overflow: hidden;height: 5em;">
-                            <p class="pe-1 m-0">1</p>
-                            <img src="images//cringe.jpg">
-                            <p class="ps-1">Опишите и систематизируйте вашу собственную технологию обучения</p>
-                        </div> </td>
-                  </tr>
-                  <tr>
-                      <td><div class="d-flex" style="overflow: hidden;height: 5em;">
-                            <p class="pe-1 m-0">1</p>
-                            <img src="images//cringe.jpg">
-                            <p class="ps-1">Опишите и систематизируйте вашу собственную технологию обучения</p>
-                        </div> </td><td></td>
-                  </tr>
-                  <tr>
-                      <td></td><td><div class="d-flex" style="overflow: hidden;height: 5em;">
-                            <p class="pe-1 m-0">1</p>
-                            <img src="images//cringe.jpg">
-                            <p class="ps-1">Опишите и систематизируйте вашу собственную технологию обучения</p>
-                        </div> </td>
-                  </tr>
-              </table>
-              <div class="row pt-5">
-                  <div class="col-md-8">
-                      Проверьте конструктор инстуркции на деле  с помощью 7 дневной бесплатной подписки
-                  </div>
-                  <div class="col-md-4">
-                      <button>Получить подписку</button>
-                  </div>
-              </div>
-        </div>
-      </section>
-      <section>
-          <div class="container">
-            <div class="section-title pt-5">
-            <p class="mb-5 h1 weight-600">Почему стоит выбрать CURSUS ?</p>
-          </div>
-              <div class="row py-5">
-              <div class="col-md-4 d-flex flex-column text-center align-items-center">
-                  <img src="images//cringe.jpg" style="height: 10em;width: 10em;">
-                  <p class="h1">экономия времения</p>
-                  <p>С помощью функции тестирования вы сможете оперативно и быстро подбирать новых сотрудников и тестировать действующих</p>
-              </div>
-              <div class="col-md-4 d-flex flex-column text-center align-items-center">
-                  <img src="images//cringe.jpg" style="height: 10em;width: 10em;">
-                  <p class="h1">автоматизация 
-процессов</p>
-                  <p>Автоматизируйте плавное внедрение новых сотрудников с помощью инструкции которые вы сможете создать на портале</p>
-              </div>
-              <div class="col-md-4 d-flex flex-column text-center align-items-center">
-                  <img src="images//cringe.jpg" style="height: 10em;width: 10em;">
-                  <p class="h1">Обучение 
-в любое время</p>
-                  <p>Обучайтесь и расширяйте свои знания с помощью курсов и книг которые доступны постоянно</p>
-              </div>
-          </div>
-          </div>
-      </section>
     </main>
     <footer>
-        <div class="container">
-            <img src="images//cringe.jpg" style="height: 5em;width: 5em;" class="py-3">
-            <div class="row">
+        <div class="container px-5 py-4">
+            <img src="https://cursus.asia/assets/brand/logo.svg" style="height: 7em;" class="py-3">
+            <div class="row ps-3 weight-500">
             <div class="col-md-3">
                 <p>О нас</p>
                 <p>Курсы</p>
@@ -538,21 +548,21 @@
                 <p>Библиотека</p>
                 <p>Контакты</p>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-5">
                 <p>Тестирование</p>
                 <p>Образовательные курсы</p>
                 <p>Создание инструкции</p>
                 <p>Договор публичной оферты</p>
                 <p>Политика конфиденциальности</p>
             </div>
-            <div class="col-md-5">
-                <p class="h1">Свяжитесь с нами:</p>
-                <span><img src="images//cringe.jpg" class="pe-3" style="height: 5em;width: 5em;">+7 775 228 3812</span>
-                <span><img src="images//cringe.jpg" class="pe-3" style="height: 5em;width: 5em;">info@cursu.asia</span>
+            <div class="col-md-4">
+                <p class="h2 weight-700 pb-2">Свяжитесь с нами:</p>
+                <span><img src="images//Group 391.svg" class="pe-3">+7 775 228 3812</span><br><br>
+                <span><img src="images//Group 391.svg" class="pe-3">info@cursu.asia</span>
             </div>
         </div>
         <div class="row d-flex justify-content-center">
-            <p class="py-3" style="width: auto;"><img src="images//cringe.jpg" class="pe-3" style="height: 5em;width: 5em;">Copyright CURSUS. Almaty 2021</p>
+            <p class="h5 weight-500 pt-4" style="width: auto;"><img src="images//Group 397.svg" class="pe-2">Copyright <span class="weight-700">CURSUS.</span> Almaty 2021</p>
         </div>
         </div>
     </footer>
